cmd/hello/build/log/idf_py_stdout_output_46361
[1/9] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/hello.c.obj
FAILED: esp-idf/main/CMakeFiles/__idf_main.dir/hello.c.obj 
/opt/esp/tools/tools/riscv32-esp-elf/esp-2022r1-11.2.0/riscv32-esp-elf/bin/riscv32-esp-elf-gcc -DMBEDTLS_CONFIG_FILE=\"mbedtls/esp_config.h\" -DUNITY_INCLUDE_CONFIG_H -I/Users/schubert/Downloads/WIP/sandbox/src/hello/build/config -I/Users/schubert/Downloads/WIP/sandbox/src/hello/main -I/opt/esp/esp-idf/components/newlib/platform_include -I/opt/esp/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/opt/esp/esp-idf/components/freertos/esp_additions/include/freertos -I/opt/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/riscv/include -I/opt/esp/esp-idf/components/freertos/esp_additions/include -I/opt/esp/esp-idf/components/esp_hw_support/include -I/opt/esp/esp-idf/components/esp_hw_support/include/soc -I/opt/esp/esp-idf/components/esp_hw_support/include/soc/esp32c3 -I/opt/esp/esp-idf/components/esp_hw_support/port/esp32c3/. -I/opt/esp/esp-idf/components/esp_hw_support/port/esp32c3/private_include -I/opt/esp/esp-idf/components/heap/include -I/opt/esp/esp-idf/components/log/include -I/opt/esp/esp-idf/components/soc/include -I/opt/esp/esp-idf/components/soc/esp32c3/. -I/opt/esp/esp-idf/components/soc/esp32c3/include -I/opt/esp/esp-idf/components/hal/esp32c3/include -I/opt/esp/esp-idf/components/hal/include -I/opt/esp/esp-idf/components/hal/platform_port/include -I/opt/esp/esp-idf/components/esp_rom/include -I/opt/esp/esp-idf/components/esp_rom/include/esp32c3 -I/opt/esp/esp-idf/components/esp_rom/esp32c3 -I/opt/esp/esp-idf/components/esp_common/include -I/opt/esp/esp-idf/components/esp_system/include -I/opt/esp/esp-idf/components/esp_system/port/soc -I/opt/esp/esp-idf/components/esp_system/port/include/riscv -I/opt/esp/esp-idf/components/esp_system/port/include/private -I/opt/esp/esp-idf/components/riscv/include -I/opt/esp/esp-idf/components/lwip/include -I/opt/esp/esp-idf/components/lwip/include/apps -I/opt/esp/esp-idf/components/lwip/include/apps/sntp -I/opt/esp/esp-idf/components/lwip/lwip/src/include -I/opt/esp/esp-idf/components/lwip/port/esp32/include -I/opt/esp/esp-idf/components/lwip/port/esp32/include/arch -I/opt/esp/esp-idf/components/esp_ringbuf/include -I/opt/esp/esp-idf/components/efuse/include -I/opt/esp/esp-idf/components/efuse/esp32c3/include -I/opt/esp/esp-idf/components/driver/include -I/opt/esp/esp-idf/components/driver/deprecated -I/opt/esp/esp-idf/components/esp_pm/include -I/opt/esp/esp-idf/components/mbedtls/port/include -I/opt/esp/esp-idf/components/mbedtls/mbedtls/include -I/opt/esp/esp-idf/components/mbedtls/mbedtls/library -I/opt/esp/esp-idf/components/mbedtls/esp_crt_bundle/include -I/opt/esp/esp-idf/components/esp_app_format/include -I/opt/esp/esp-idf/components/bootloader_support/include -I/opt/esp/esp-idf/components/bootloader_support/bootloader_flash/include -I/opt/esp/esp-idf/components/esp_partition/include -I/opt/esp/esp-idf/components/app_update/include -I/opt/esp/esp-idf/components/spi_flash/include -I/opt/esp/esp-idf/components/pthread/include -I/opt/esp/esp-idf/components/esp_timer/include -I/opt/esp/esp-idf/components/app_trace/include -I/opt/esp/esp-idf/components/esp_event/include -I/opt/esp/esp-idf/components/nvs_flash/include -I/opt/esp/esp-idf/components/esp_phy/include -I/opt/esp/esp-idf/components/esp_phy/esp32c3/include -I/opt/esp/esp-idf/components/vfs/include -I/opt/esp/esp-idf/components/esp_netif/include -I/opt/esp/esp-idf/components/wpa_supplicant/include -I/opt/esp/esp-idf/components/wpa_supplicant/port/include -I/opt/esp/esp-idf/components/wpa_supplicant/esp_supplicant/include -I/opt/esp/esp-idf/components/esp_wifi/include -I/opt/esp/esp-idf/components/unity/include -I/opt/esp/esp-idf/components/unity/unity/src -I/opt/esp/esp-idf/components/cmock/CMock/src -I/opt/esp/esp-idf/components/console -I/opt/esp/esp-idf/components/http_parser -I/opt/esp/esp-idf/components/esp-tls -I/opt/esp/esp-idf/components/esp-tls/esp-tls-crypto -I/opt/esp/esp-idf/components/esp_adc/include -I/opt/esp/esp-idf/components/esp_adc/interface -I/opt/esp/esp-idf/components/esp_adc/esp32c3/include -I/opt/esp/esp-idf/components/esp_adc/deprecated/include -I/opt/esp/esp-idf/components/esp_eth/include -I/opt/esp/esp-idf/components/esp_gdbstub/include -I/opt/esp/esp-idf/components/esp_gdbstub/riscv -I/opt/esp/esp-idf/components/esp_gdbstub/esp32c3 -I/opt/esp/esp-idf/components/esp_hid/include -I/opt/esp/esp-idf/components/tcp_transport/include -I/opt/esp/esp-idf/components/esp_http_client/include -I/opt/esp/esp-idf/components/esp_http_server/include -I/opt/esp/esp-idf/components/esp_https_ota/include -I/opt/esp/esp-idf/components/esp_lcd/include -I/opt/esp/esp-idf/components/esp_lcd/interface -I/opt/esp/esp-idf/components/protobuf-c/protobuf-c -I/opt/esp/esp-idf/components/protocomm/include/common -I/opt/esp/esp-idf/components/protocomm/include/security -I/opt/esp/esp-idf/components/protocomm/include/transports -I/opt/esp/esp-idf/components/esp_local_ctrl/include -I/opt/esp/esp-idf/components/esp_psram/include -I/opt/esp/esp-idf/components/espcoredump/include -I/opt/esp/esp-idf/components/espcoredump/include/port/riscv -I/opt/esp/esp-idf/components/wear_levelling/include -I/opt/esp/esp-idf/components/sdmmc/include -I/opt/esp/esp-idf/components/fatfs/diskio -I/opt/esp/esp-idf/components/fatfs/vfs -I/opt/esp/esp-idf/components/fatfs/src -I/opt/esp/esp-idf/components/idf_test/include -I/opt/esp/esp-idf/components/idf_test/include/esp32c3 -I/opt/esp/esp-idf/components/ieee802154/include -I/opt/esp/esp-idf/components/json/cJSON -I/opt/esp/esp-idf/components/mqtt/esp-mqtt/include -I/opt/esp/esp-idf/components/spiffs/include -I/opt/esp/esp-idf/components/wifi_provisioning/include -march=rv32imc  -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -nostartfiles -Og -fmacro-prefix-map=/Users/schubert/Downloads/WIP/sandbox/src/hello=. -fmacro-prefix-map=/opt/esp/esp-idf=/IDF -fstrict-volatile-bitfields -Wno-error=unused-but-set-variable -fno-jump-tables -fno-tree-switch-conversion -DconfigENABLE_FREERTOS_DEBUG_OCDAWARE=1 -std=gnu17 -Wno-old-style-declaration -D_GNU_SOURCE -DIDF_VER=\"v5.0-rc1-dirty\" -DESP_PLATFORM -D_POSIX_READER_WRITER_LOCKS -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/hello.c.obj -MF esp-idf/main/CMakeFiles/__idf_main.dir/hello.c.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/hello.c.obj -c /Users/schubert/Downloads/WIP/sandbox/src/hello/main/hello.c
/Users/schubert/Downloads/WIP/sandbox/src/hello/main/hello.c: In function 'app_main':
/Users/schubert/Downloads/WIP/sandbox/src/hello/main/hello.c:33:36: error: format '%d' expects argument of type 'int', but argument 2 has type 'uint32_t' {aka 'long unsigned int'} [-Werror=format=]
   33 |   printf("Minimum free heap size: %d bytes\n", esp_get_minimum_free_heap_size());
      |                                   ~^           ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
      |                                    |           |
      |                                    int         uint32_t {aka long unsigned int}
      |                                   %ld
cc1: some warnings being treated as errors
[2/9] Performing build step for 'bootloader'
[1/1] cd /Users/schubert/Downloads/WIP/sandbox/src/hello/build/bootloader/esp-idf/esptool_py && /opt/esp/tools/python_env/idf5.0_py3.10_env/bin/python /opt/esp/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x0 /Users/schubert/Downloads/WIP/sandbox/src/hello/build/bootloader/bootloader.bin
Bootloader binary size 0x4ec0 bytes. 0x3140 bytes (38%) free.
ninja: build stopped: subcommand failed.
